--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1 {
 }
 
 .description {
+	color: #fafafa;
 	margin-top: -60px;
 	text-align: center;
 	font-size: 25px;
@@ -86,6 +87,7 @@ h1 {
 	width: 23px;
 	height: 23px;
 	background-image: url('../images/block.gif');
+	background-size: 23px 23px;
 	border: 1px solid transparent;
 	position: relative;
 	float: left;
