--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1 {
 	background-color: #f7b7d6;
 	opacity: 0.5;
 	background-size: 23px 23px;
-	border: 1px solid transparent;
+	border: 1px solid #ffeaf4;
 	position: relative;
 	float: left;
 }
