--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body {
 	font-family:GenericMobile;
 	font-size: .85em;
 	background-color: #414647;
-
+	background: url('../images/wallpaper.gif');
+width: 100%;
 }
 
 h1 {
