--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 	font-family:GenericMobile;
 	font-size: .85em;
 	background-color: #414647;
-	background: url('../images/wallpaper.gif');
+	background: url('../images/wallpaper.jpg');
 width: 100%;
 }
 
